fix: faqs button alignment

--- a/themes/bella/styles/section.faqs.scss
+++ b/themes/bella/styles/section.faqs.scss
@@ -22,6 +22,7 @@
 
     .content-area {
       display: grid;
+      justify-items: center;
       gap: var(--spacing-16);
 
       .cta {
